Rectification des scripts.bat